remove input container

--- a/index.html
+++ b/index.html
@@ -15,18 +15,8 @@
         <img id="image" src="" alt="Guess the word" />
       </div>
 
-      <!-- Letter Boxes -->
+      <!-- Letter Boxes (User will type to fill these) -->
       <div id="letter-boxes"></div>
-
-      <!-- Input for user's guess -->
-      <div id="input-container">
-        <input
-          type="text"
-          id="user-input"
-          placeholder="Enter the name"
-          readonly
-        />
-      </div>
 
       <!-- Buttons -->
       <div id="controls">
