--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       <!-- Letter Boxes (User will type to fill these) -->
       <div id="letter-boxes"></div>
 
+      <!-- On-Screen Keyboard -->
+      <div id="keyboard-container">
+        <div id="keyboard">
+          <!-- Letters A to Z will be dynamically added here -->
+        </div>
+        <button id="delete">Delete</button>
+      </div>
+
       <!-- Buttons -->
       <div id="controls">
         <button id="submit">Submit</button>
